--- a/YumBlazor/wwwroot/app.css
+++ b/YumBlazor/wwwroot/app.css
@@ -1,3 +1,7 @@
+.border-radius-15 {
+    border-radius: 15px
+}
+
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
