--- a/YumBlazor/Components/_Imports.razor
+++ b/YumBlazor/Components/_Imports.razor
@@ -10,4 +10,7 @@
 @using YumBlazor
 @using YumBlazor.Components
 @using YumBlazor.Repository.IRepository
+@using YumBlazor.Components.Alerts
+@using YumBlazor.Services.Extensions
+@inject IJSRuntime JSRun
 @inject ICategoryRepository CategoryRepository
