--- a/YumBlazor/Components/CategoryPage/CategoryUpset.razor
+++ b/YumBlazor/Components/CategoryPage/CategoryUpset.razor
@@ -10,7 +10,7 @@
 
 @if (IsProcessing)
 {
-    @((MarkupString)ProcessingHTML)
+    <ProcessingAlertComponent />
 }
 else
 {
@@ -23,25 +23,29 @@ else
                         <ValidationSummary />
                         <div class="border p-3 mt-4">
                             <div class="form-floating py-3 col-12">
-                                <InputText @bind-Value="Model.Name" class="form-control" id="Name" placeholder="Name" />
-                                <label for="Name" class="form-label">Name</label>
+                                <InputText @bind-Value="Model.Name" class="form-control" id="Name" placeholder="Name" disabled="@IsSavingForm" />
+                                <label for="Name">Name</label>
                                 <ValidationMessage For="@(() => Model.Name)" class="text-danger" />
                             </div>
-                        </div>
-                        <div class="row mt-3">
-                            <div class="col-6 col-md-6">
-                                <button type="submit" class="btn btn-primary" disabled="@IsProcessing">
-                                    <i class="bi bi-save"></i> Save
-                                </button>
-                            </div>
-                            <div class="col-6 col-md-6">
-                                <button type="button" class="btn btn-danger" disabled="@IsProcessing" @onclick="GoBackToIndex">
-                                    <i class="bi bi-save"></i> Cancel
-                                </button>
+                            <div class="row mt-3">
+                                <div class="col-6 col-md-3">
+                                    <button type="submit" class="btn btn-primary form-control" disabled="@IsSavingForm">
+                                        <i class="bi bi-save"></i> Save
+                                    </button>
+                                </div>
+                                <div class="col-6 col-md-3">
+                                    <button type="button" class="btn btn-danger form-control" disabled="@IsSavingForm" @onclick="GoBackToIndex">
+                                        <i class="bi bi-arrow-bar-left"></i> Cancel
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </EditForm>
                 </div>
+                @if (IsSavingForm)
+                {
+                    <ProcessingAlertComponent CssClass="alert alert-info" Message="@Message" />
+                }
             </div>
         </div>
     </div>
@@ -52,7 +56,8 @@ else
     public long? Id { get; set; } = null;
     private string Title { get; set; } = "Create - New Category";
     private bool IsProcessing { get; set; } = false;
-    private string ProcessingHTML { get; set; } = string.Empty;
+    private bool IsSavingForm { get; set; } = false;
+    private string Message { get; set; } = string.Empty;
 
     [SupplyParameterFromForm]
     private Category Model { get; set; } = new();
@@ -62,8 +67,8 @@ else
     protected override async Task OnInitializedAsync()
     {
         IsProcessing = true;
-        ProcessingHTML = ProcessingOnInitializationHTML();
         Repository = CategoryRepository;
+        await JSRun.ToastrWarning("Loading Category Page...");
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
@@ -72,6 +77,7 @@ else
         {
             if (Id.HasValue)
             {
+                await JSRun.ToastrInfo($"Loading Category with Id {Id}...");
                 Model = await Repository.GetByIdAsync(Id.GetValueOrDefault()) ?? new();
 
                 if (Model == null || Model.Id == 0)
@@ -91,45 +97,44 @@ else
 
     private async Task FormValidation()
     {
-        IsProcessing = true;
-
-        ProcessingHTML = @"
-            <div class='position-absolute w-75 h-75 flex-column align-items-center bg-white'>
-                <div class='spinner-border position-absolute flex-column align-items-center bg-white' role='status'>
-                    <span class='visually-hidden'>Processing...</span>
-                </div>
-            </div>";
+        IsSavingForm = true;
+        bool success = false;
+        Category? result;
 
         if (Model.Id > 0)
         {
-            var result = await Repository.UpdateAsync(Model);
-            Model = result ?? new Category();
-            var success = Model.Id > 0;
-            NavigationManager.NavigateTo($"/category/{success}");
+            Message = $"Updating Category with Id {Model.Id} - {Model.Name}";
+            await JSRun.ToastrInfo(Message);
+            await Task.Delay(1000);
+            result = await Repository.UpdateAsync(Model);
         }
         else
         {
-            var result = await Repository.AddAsync(Model);
-            Model = result ?? new Category();
-            var success = Model.Id > 0;
-            NavigationManager.NavigateTo($"/category/{success}");
+            Message = $"Creating a new Category - {Model.Name}";
+            await JSRun.ToastrInfo(Message);
+            await Task.Delay(1000);
+            result = await Repository.AddAsync(Model);
         }
 
-        NavigationManager.NavigateTo($"/category/{ProcessingHTML}");
+        Model = result ?? new Category();
+        success = Model.Id > 0;
+        Message += success ? $", was successfully" : " was a error";
+
+        if (success)
+        {
+            await JSRun.ToastrSuccess(Message);
+        } else
+        {
+            await JSRun.ToastrError(Message);
+        }
+
+        await Task.Delay(1000);
+
+        NavigationManager.NavigateTo($"/category");
     }
 
     private void GoBackToIndex()
     {
         NavigationManager.NavigateTo("/category");
-    }
-
-    private string ProcessingOnInitializationHTML()
-    {
-        return @"
-            <div class='position-absolute w-75 h-75 flex-column align-items-center bg-white'>
-                <div class='spinner-border position-absolute flex-column align-items-center bg-white' role='status'>
-                    <span class='visually-hidden'>Loading...</span>
-                </div>
-            </div>";
     }
 }
