--- a/YumBlazor/Components/CategoryPage/CategoryIndex.razor
+++ b/YumBlazor/Components/CategoryPage/CategoryIndex.razor
@@ -41,7 +41,7 @@ else
                                     <td class="text-center">@category.Id</td>
                                     <td class="text-center">@category.Name</td>
                                     <td class="text-center"><a href="/category/update/@category.Id" class="btn btn-primary" title="Edit a @category.Name"><i class="bi bi-pencil-square"></i> Edit </a></td>
-                                    <td class="text-center"><button type="button" class="btn btn-danger" title="Delete a @category.Name"><i class="bi bi-x-square"></i> Delete </button></td>
+                                    <td class="text-center"><button type="button" class="btn btn-danger" title="Delete a @category.Name" @onclick="() => ShowDeleteConfirmModal(category.Id)"><i class="bi bi-x-square"></i> Delete </button></td>
                                 </tr>
                             }
                         }
@@ -56,6 +56,11 @@ else
             </div>
         </div>
     </div>
+    <BsModalComponent IsProcessing="@IsProcessingDelete" Title="Category Modal" OnModalConfirmation="OnModalConfirmation">
+        <div>
+            <p>Are you sure, to delete this category?</p>
+        </div>
+    </BsModalComponent>
 }
 
 @code {
@@ -65,6 +70,8 @@ else
     public bool Success { get; set; }
 
     public bool IsProcessing { get; set; } = false;
+    public bool IsProcessingDelete { get; set; } = false;
+    public long DeleteId { get; set; }
     private IEnumerable<Category> Categories { get; set; } = null!;
     private ICategoryRepository Repository { get; set; } = null!;
 
@@ -72,17 +79,50 @@ else
     {
         IsProcessing = true;
         Repository = CategoryRepository;
-        await JSRun.ToastrWarning("Load Page");
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
         {
+            await JSRun.ToastrWarning("Loading Data...............");
             Categories = await Repository.GetAllAsync();
+            await Task.Delay(1000);
             IsProcessing = false;
             StateHasChanged();
             await JSRun.ToastrSuccess("Page Loaded Successfully");
         }
+    }
+
+    private async Task ShowDeleteConfirmModal(long id)
+    {
+        DeleteId = id;
+        await JSRun.ShowModal("bsConfirmationModal");
+    }
+    private async Task OnModalConfirmation(bool confirmed)
+    {
+        IsProcessingDelete = true;
+        if (confirmed)
+        {
+            await Task.Delay(2000);
+            await JSRun.ToastrInfo("Deleting a category");
+            var result = await Repository.DeleteAsync(DeleteId);
+
+            if (!result)
+            {
+                await JSRun.ToastrError("Error, entity not deleted");
+                return;
+            }
+        }
+        else
+        {
+            await JSRun.ToastrWarning("Cancelled Deletion of a category");
+        }
+        DeleteId = 0;
+        await Task.Delay(2000);
+        await JSRun.ToastrSuccess("Re-loading data");
+        Categories = await Repository.GetAllAsync();
+        await JSRun.HideModal("bsConfirmationModal");
+        IsProcessingDelete = false;
     }
 }
