--- a/YumBlazor/Components/_Imports.razor
+++ b/YumBlazor/Components/_Imports.razor
@@ -12,5 +12,6 @@
 @using YumBlazor.Repository.IRepository
 @using YumBlazor.Components.Alerts
 @using YumBlazor.Services.Extensions
+@using YumBlazor.Components.Shared
 @inject IJSRuntime JSRun
 @inject ICategoryRepository CategoryRepository
