agregando cambios pendientes

--- a/YumBlazor/Components/CategoryPage/CategoryIndex.razor
+++ b/YumBlazor/Components/CategoryPage/CategoryIndex.razor
@@ -1,7 +1,7 @@
 ﻿@page "/category"
 @page "/category/{message}"
 @page "/category/{success:bool}/{message}"
-@using YumBlazor.Data.Entitys
+@using YumBlazor.Data.Entities
 
 @if (IsProcessing)
 {
