--- a/YumBlazor/Components/CategoryPage/CategoryUpset.razor
+++ b/YumBlazor/Components/CategoryPage/CategoryUpset.razor
@@ -1,6 +1,6 @@
 ﻿@page "/category/create"
 @page "/category/update/{Id:long}"
-@using YumBlazor.Data.Entitys
+@using YumBlazor.Data.Entities
 @inject NavigationManager NavigationManager
 
 <PageTitle>Category - @Title</PageTitle>
