--- a/YumBlazor/Components/_Imports.razor
+++ b/YumBlazor/Components/_Imports.razor
@@ -14,4 +14,4 @@
 @using YumBlazor.Services.Extensions
 @using YumBlazor.Components.Shared
 @inject IJSRuntime JSRun
-@inject ICategoryRepository CategoryRepository
+@inject IProductRepository CategoryRepository
