--- a/YumBlazor/Components/Layout/NavMenu.razor
+++ b/YumBlazor/Components/Layout/NavMenu.razor
@@ -12,19 +12,25 @@
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="nav flex-column">
-        <div class="nav-item px-3">
+@*         <div class="nav-item px-3">
             <NavLink class="nav-link p-2" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
-        </div>
+        </div> *@
         
         <div class="nav-item px-3">
-            <NavLink class="nav-link p-2" href="/category" Match="NavLinkMatch.All">
+            <NavLink class="nav-link p-2" href="category" Match="NavLinkMatch.All">
                 <span class="bi bi-ca" aria-hidden="true"></span> Categories
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link p-2" href="product" Match="NavLinkMatch.All">
+                <span class="bi bi-ca" aria-hidden="true"></span> Products
+            </NavLink>
+        </div>
+
+@*         <div class="nav-item px-3">
             <NavLink class="nav-link p-2" href="counter">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
@@ -71,7 +77,7 @@
                     </NavLink>
                 </div>
             </NotAuthorized>
-        </AuthorizeView>
+        </AuthorizeView> *@
     </nav>
 </div>
 
