--- a/YumBlazor/Components/ProductPage/ProductIndex.razor
+++ b/YumBlazor/Components/ProductPage/ProductIndex.razor
@@ -1,4 +1,5 @@
-﻿@page "/category"
+﻿@page "/Product"
+@inject IWebHostEnvironment Environment
 @using YumBlazor.Data.Entities
 
 @if (IsProcessing)
@@ -11,14 +12,14 @@ else
         <div class="card-header bg-primary bg-gradient m-lg-0 py-1 bg-opacity-75 text-center border-radius-15" style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-white py-1">Category List</h2>
+                    <h2 class="text-white py-1">Product List</h2>
                 </div>
             </div>
         </div>
         <div class="card-body py-4">
             <div class="row pb-3">
                 <div class="col-12 text-end">
-                    <a href="/category/create" class="btn btn-lg btn-secondary w-25"><i class="bi bi-plus-square"></i> Add a New Category</a>
+                    <a href="/Product/create" class="btn btn-lg btn-secondary w-25"><i class="bi bi-plus-square"></i> Add a New Product</a>
                 </div>
             </div>
             <div>
@@ -27,19 +28,21 @@ else
                         <tr>
                             <th class="text-center">#</th>
                             <th class="text-center">Name</th>
+                            <th class="text-center">Category</th>
                             <th colspan="2" class="text-center">Actions</th>
                         </tr>
                     </thead>
                     <tbody>
                         @if (Categories != null && Categories.Count() > 0)
                         {
-                            @foreach (var category in Categories.OrderBy(x => x.Id))
+                            @foreach (var Product in Categories.OrderBy(x => x.Id))
                             {
                                 <tr>
-                                    <td class="text-center">@category.Id</td>
-                                    <td class="text-center">@category.Name</td>
-                                    <td class="text-center"><a href="/category/update/@category.Id" class="btn btn-primary" title="Edit a @category.Name"><i class="bi bi-pencil-square"></i> Edit </a></td>
-                                    <td class="text-center"><button type="button" class="btn btn-danger" title="Delete a @category.Name" @onclick="() => ShowDeleteConfirmModal(category.Id)"><i class="bi bi-x-square"></i> Delete </button></td>
+                                    <td class="text-center">@Product.Id</td>
+                                    <td class="text-center">@Product.Name</td>
+                                    <td class="text-center">@Product.Category.Name</td>
+                                    <td class="text-center"><a href="/Product/update/@Product.Id" class="btn btn-primary" title="Edit a @Product.Name"><i class="bi bi-pencil-square"></i> Edit </a></td>
+                                    <td class="text-center"><button type="button" class="btn btn-danger" title="Delete a @Product.Name" @onclick="() => ShowDeleteConfirmModal(Product.Id)"><i class="bi bi-x-square"></i> Delete </button></td>
                                 </tr>
                             }
                         }
@@ -54,24 +57,25 @@ else
             </div>
         </div>
     </div>
-    <BsModalComponent IsProcessing="@IsProcessingDelete" Title="Category Modal" OnModalConfirmation="OnModalConfirmation">
+    <BsModalComponent IsProcessing="@IsProcessingDelete" Title="Product Modal" OnModalConfirmation="OnModalConfirmation">
         <div>
-            <p>Are you sure, to delete this category?</p>
+            <p>Are you sure, to delete this Product?</p>
         </div>
     </BsModalComponent>
 }
 
 @code {
+
     public bool IsProcessing { get; set; } = false;
     public bool IsProcessingDelete { get; set; } = false;
     public long DeleteId { get; set; }
-    private IEnumerable<Category> Categories { get; set; } = null!;
-    private ICategoryRepository Repository { get; set; } = null!;
+    private IEnumerable<Product> Categories { get; set; } = null!;
+    private IProductRepository Repository { get; set; } = null!;
 
     protected override async Task OnInitializedAsync()
     {
         IsProcessing = true;
-        Repository = CategoryRepository;
+        Repository = ProductRepository;
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
@@ -98,7 +102,16 @@ else
         if (confirmed)
         {
             await Task.Delay(2000);
-            await JSRun.ToastrInfo("Deleting a category");
+            await JSRun.ToastrInfo("Deleting a Product");
+
+            var model = await Repository.GetByIdAsync(DeleteId);
+            var imageFilePath = Path.Combine(Environment.WebRootPath, model.ImageUrl?.Trim('/'));
+
+            if (File.Exists(imageFilePath))
+            {
+                File.Delete(imageFilePath);
+            }
+
             var result = await Repository.DeleteAsync(DeleteId);
 
             if (!result)
@@ -109,7 +122,7 @@ else
         }
         else
         {
-            await JSRun.ToastrWarning("Cancelled Deletion of a category");
+            await JSRun.ToastrWarning("Cancelled Deletion of a Product");
         }
         DeleteId = 0;
         await Task.Delay(2000);
